Refactor code for improved readability and performance; enhance type name handling and error logging